# termish

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
faketerm/: __init__.py  errors.py  quote_masker.py
faketerm/fs/: __init__.py  memory.py  protocol.py
faketerm/interpreter/: core.py
faketerm/interpreter/commands/: _argparse.py  archive.py  diff.py  filesystem.py  io.py  jq.py  meta.py  search.py  text.py
faketerm/jq/: __init__.py  ast.py  parser.py
termish/: __init__.py  ast.py  context.py  errors.py  parser.py
termish/fs/: memory.py  protocol.py
termish/interpreter/: __init__.py  core.py
termish/interpreter/commands/: _argparse.py  _util.py  archive.py  diff.py  filesystem.py  io.py  jq.py  meta.py  search.py  sed.py  text.py
termish/jq/: __init__.py  eval.py
tests/: test_archive.py  test_command_injection.py  test_find.py  test_grep.py  test_interpreter.py  test_jq.py  test_memory_fs.py  test_monkeyfs_compat.py  test_parser.py  test_quote_masker.py  test_sed.py  test_text_commands.py
