[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "termish"
version = "0.1.0"
description = "Virtual terminal with shell-like commands over a pluggable filesystem."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-timeout", "monkeyfs"]

[tool.uv.sources]
monkeyfs = { path = "../monkeyfs", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
