[project]
name = "termish"
version = "0.1.4"
description = "Virtual terminal with shell-like commands over a pluggable filesystem."
readme = "README.md"
license = "MIT"
authors = [
    {name = "ashenfad"},
]
keywords = ["terminal", "shell", "virtual", "filesystem", "commands", "jq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/ashenfad/termish"
"Bug Tracker" = "https://github.com/ashenfad/termish/issues"
"Documentation" = "https://github.com/ashenfad/termish#readme"
"Source" = "https://github.com/ashenfad/termish"

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "monkeyfs",
]
test = [
    "pytest",
    "monkeyfs",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E731"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["./"], exclude = ["tests*"]}}

[tool.setuptools.package-data]
termish = ["py.typed"]
